--- a/mushroom_classification.ipynb
+++ b/mushroom_classification.ipynb
@@ -5,7 +5,7 @@
    "id": "ee582afe-0742-4679-90af-1940cc673466",
    "metadata": {},
    "source": [
-    "The data used was from: https://www.kaggle.com/datasets/uciml/mushroom-classification\n",
+    "The data used was from: https://www.kaggle.com/datasets/uciml/mushroom-classification.\n",
     "First, the data is imported into a pandas dataframe. This means that the data can be processed using various python packages"
    ]
   },
